--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "lucide-react": "^0.552.0",
         "next-themes": "^0.4.6",
         "react": "^19.1.1",
+        "react-d3-tree": "^3.6.6",
         "react-day-picker": "^9.11.1",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.66.0",
