--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-hook-form": "^7.66.0",
         "react-resizable-panels": "^3.0.6",
         "react-router-dom": "^7.9.5",
+        "recharts": "^2.15.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.16",
