alteração multiplos perfis colaborador

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_API_BASE_URL=http://localhost:8000/api/v1
 # App Configuration
 VITE_APP_NAME=ARQManager
 VITE_APP_VERSION=2.0.0
+
+VITE_TINYMCE_API_KEY=nj4tt6v8z8u6i7rlhg56w8re8nrcekdta82m07tjq59xafio
